[package]
name = "cdb32"
version = "0.0.2"
authors = ["github.com/jdamick", "Kan-Ru Chen <kanru@kanru.info>"]
description = "Pure Rust library to read and write 32-bit CDB files"
homepage = "https://github.com/jdamick/cdb32-rs"
repository = "https://github.com/jdamick/cdb32-rs"
readme = "README.md"
license = "Unlicense"
rust-version = "1.70"
edition = "2021"

[dependencies]
memmap2 = "0.9.1"

[dev-dependencies]
criterion = "0.6"
tempfile = "3.9.0"

[workspace]
members = ["fuzzer"]

[[bench]]
name = "cdb"
harness = false

[profile.fuzzing]
inherits = "release"
debug = true
panic = "abort"
